Push from play.spade-lang.org

--- a/info.yaml
+++ b/info.yaml
@@ -1,56 +1,57 @@
+
 # Tiny Tapeout project information
 project:
-  title:        ""      # Project title
-  author:       ""      # Your name
+  title:        "Spade playground test"      # Project title
+  author:       "TheZoq2"      # Your name
   discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  ""      # One line description of what your project does
-  language:     "Verilog" # other examples include SystemVerilog, Amaranth, VHDL, etc
-  clock_hz:     0       # Clock frequency in Hz (or 0 if not applicable)
+  description:  "A test for the fully in-browser flow from play.spade-lang.org to tinytapeout submission; Built on play.spade-lang.org"      # One line description of what your project does
+  language:     "Spade" # other examples include SystemVerilog, Amaranth, VHDL, etc
+  clock_hz:     10000       # Clock frequency in Hz (or 0 if not applicable)
 
   # How many tiles your design occupies? A single tile is about 167x108 uM.
   tiles: "1x1"          # Valid values: 1x1, 1x2, 2x2, 3x2, 4x2, 6x2 or 8x2
 
   # Your top module name must start with "tt_um_". Make it unique by including your github username:
-  top_module:  "tt_um_example"
+  top_module:  "tt_um_your_design"
 
   # List your project's source files here.
   # Source files must be in ./src and you must list each source file separately, one per line.
-  # Don't forget to also update `PROJECT_SOURCES` in test/Makefile.
+  # Don't forget to also update PROJECT_SOURCES in test/Makefile.
   source_files:
-    - "project.v"
+    - "spade.sv"
 
 # The pinout of your project. Leave unused pins blank. DO NOT delete or add any pins.
 # This section is for the datasheet/website. Use descriptive names (e.g., RX, TX, MOSI, SCL, SEG_A, etc.).
 pinout:
   # Inputs
-  ui[0]: ""
-  ui[1]: ""
-  ui[2]: ""
-  ui[3]: ""
-  ui[4]: ""
-  ui[5]: ""
-  ui[6]: ""
-  ui[7]: ""
+  ui[0]: "TODO"
+  ui[1]: "TODO"
+  ui[2]: "TODO"
+  ui[3]: "TODO"
+  ui[4]: "TODO"
+  ui[5]: "TODO"
+  ui[6]: "TODO"
+  ui[7]: "TODO"
 
   # Outputs
-  uo[0]: ""
-  uo[1]: ""
-  uo[2]: ""
-  uo[3]: ""
-  uo[4]: ""
-  uo[5]: ""
-  uo[6]: ""
-  uo[7]: ""
+  uo[0]: "TODO"
+  uo[1]: "TODO"
+  uo[2]: "TODO"
+  uo[3]: "TODO"
+  uo[4]: "TODO"
+  uo[5]: "TODO"
+  uo[6]: "TODO"
+  uo[7]: "TODO"
 
   # Bidirectional pins
-  uio[0]: ""
-  uio[1]: ""
-  uio[2]: ""
-  uio[3]: ""
-  uio[4]: ""
-  uio[5]: ""
-  uio[6]: ""
-  uio[7]: ""
+  uio[0]: "UNUSED"
+  uio[1]: "UNUSED"
+  uio[2]: "UNUSED"
+  uio[3]: "UNUSED"
+  uio[4]: "UNUSED"
+  uio[5]: "UNUSED"
+  uio[6]: "UNUSED"
+  uio[7]: "UNUSED"
 
 # Do not change!
 yaml_version: 6
